--- a/KEnyin/KEnyin.vcxproj.filters
+++ b/KEnyin/KEnyin.vcxproj.filters
@@ -4,22 +4,34 @@
     <Filter Include="KEnyin">
       <UniqueIdentifier>{13E9F0BB-FF8A-1B92-E845-2FE6D486A2E2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="KEnyin\Core">
+      <UniqueIdentifier>{4BB1B563-B766-2E59-405B-2830AC0F255D}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\KEnyin.hpp" />
-    <ClInclude Include="src\KEnyin\Application.hpp">
-      <Filter>KEnyin</Filter>
+    <ClInclude Include="src\KEnyin\Core\Application.hpp">
+      <Filter>KEnyin\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\KEnyin\Base.hpp">
-      <Filter>KEnyin</Filter>
+    <ClInclude Include="src\KEnyin\Core\Assert.hpp">
+      <Filter>KEnyin\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\KEnyin\EntryPoint.hpp">
-      <Filter>KEnyin</Filter>
+    <ClInclude Include="src\KEnyin\Core\Base.hpp">
+      <Filter>KEnyin\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KEnyin\Core\EntryPoint.hpp">
+      <Filter>KEnyin\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KEnyin\Core\Log.hpp">
+      <Filter>KEnyin\Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\KEnyin\Application.cpp">
-      <Filter>KEnyin</Filter>
+    <ClCompile Include="src\KEnyin\Core\Application.cpp">
+      <Filter>KEnyin\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\KEnyin\Core\Log.cpp">
+      <Filter>KEnyin\Core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
