--- a/KEditor/imgui.ini
+++ b/KEditor/imgui.ini
@@ -9,10 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=207,19
-Size=796,531
+Pos=0,20
+Size=796,530
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][Hello, world!]
 Pos=0,19
@@ -35,14 +35,14 @@ Size=247,68
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,19
-Size=205,531
+Pos=798,20
+Size=205,431
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=1005,19
-Size=275,701
+Pos=1005,20
+Size=275,700
 Collapsed=0
 DockId=0x00000006,0
 
@@ -58,18 +58,26 @@ Collapsed=0
 
 [Window][Console]
 Pos=0,552
-Size=1003,168
+Size=796,168
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Project]
+Pos=798,453
+Size=205,267
+Collapsed=0
+DockId=0x0000000A,0
+
 [Docking][Data]
-DockSpace         ID=0x296D508D Window=0xA1FFABD2 Pos=242,284 Size=1280,701 Split=X
+DockSpace         ID=0x296D508D Window=0xA1FFABD2 Pos=190,233 Size=1280,700 Split=X
   DockNode        ID=0x00000005 Parent=0x296D508D SizeRef=1003,701 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=265,365 Split=Y Selected=0x29EABFBD
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=265,531 Split=X Selected=0x29EABFBD
-        DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=205,502 Selected=0x29EABFBD
-        DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=796,502 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=265,168 Selected=0x49278EEE
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=265,365 Split=X Selected=0x29EABFBD
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=796,530 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=796,530 Selected=0x13926F0B
+        DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=796,168 Selected=0x49278EEE
+      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=205,530 Split=Y Selected=0x29EABFBD
+        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=205,431 Selected=0x29EABFBD
+        DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=205,267 Selected=0xD04A4B96
     DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=724,365
   DockNode        ID=0x00000006 Parent=0x296D508D SizeRef=275,701 Selected=0xE7039252
 
